tests/inputs/invalid/types/bad_math/bad_add.crbc
routine main () : integer is 
    var x : integer is 1;
    var y : integer is 2;
    var z : integer is x + false;

    print(z);

    return 0;
end